--- a/starter-code/src/app/food-list/food-list.component.html
+++ b/starter-code/src/app/food-list/food-list.component.html
@@ -2,15 +2,20 @@
 
 
 <section class="section">
-  <div *ngIf="true"  class="c-search">
+
+  <div  *ngIf="true"  class="c-search">
+    <button [hidden]="show" (click)="addItem()" >
+      add food
+    </button>
     <input [hidden]="show" placeholder="name" type="text" [(ngModel)]="newName">
     <input [hidden]="show" placeholder="calories" type="text" [(ngModel)]="newCalories"/>
     <input [hidden]="show" placeholder="image" type="text" [(ngModel)]="newImage"/>
     <input [hidden]="show" placeholder="quantity" type="text" [(ngModel)]="newQuantity"/>
-    <button (click)="addItem()" (click)="show">
-      add
-    </button>
+
   </div>
+  <button (click)="addItemForm()" >
+    add item
+  </button>
   <label for="search">Search dish</label>
   <input type="text" name="" value="" placeholder="Search Food" [(ngModel)]="pattern">
   <div class="container" *ngFor="let foods of foodies |  filter:'name':pattern">
@@ -18,6 +23,7 @@
       <h2> {{foods.name}} </h2>
       <h3> Calories: {{ foods.calories}} </h3>
       <h3> Quantity: {{foods.quantity}} </h3>
+      <button type="button" name="addToList">Add to list</button>
     </div>
     <img src="{{foods.image}}" width=300>
   </div>
